--- a/floral/html/floral.html
+++ b/floral/html/floral.html
@@ -11,14 +11,19 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab&family=Montserrat+Alternates:wght@600&family=Montserrat:wght@800&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/floral/img_and_fonts/font/fontawesome-free-6.1.1/css/all.min.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="/img_and_fonts/fonts/themify-icons/themify-icons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css" 
+    integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css" 
+    integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
+    <title>Document</title>
 </head>
 <body>
     <div class="main">
         <div class="container-fluid header-container">
             <div class="header row">
-                    <div class="col-xl-3 col-lg-3 col-md-3 flower-logo">
+                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-5 flower-logo">
                         <img src="/floral/img_and_fonts/image/flower_logo.png" alt="">
                     </div>
                     <div class="col-xl-6 col-lg-7 col-md-7 nav-bar">
@@ -30,13 +35,16 @@
                             <li> <div class="sign_in"><a href="">Sign In</a></div></li>
                         </ul>
                     </div>
-                    <div class="col-xl-3 col-lg-2 col-md-2 user-icon">
+                    <div class="col-xl-3 col-lg-2 col-md-2 col-sm-8 col-7 d-flex justify-content-end user-icon">
                         <div class="icon-user">
                             <i class="fa-solid fa-user"></i>
                         </div>
                         <div class="icon-shopping">
                             <i class="fa-solid fa-bag-shopping"></i>
-                        </div>    
+                        </div> 
+                        <div class="sidebar-btn js-open-sidebar">
+                            <i class="fa-solid fa-bars"></i>
+                        </div>   
                     </div>
             </div>
         </div>
@@ -50,6 +58,10 @@
                         <h2>Flower <br> Arrangements</h2>
                         <li>For all special occasions</li>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
+                    </div>
+                    <div class="flower-arr-choose">
+                        <div class="shop-flower-arr-btn"><a href=""> Shop </a></div>
+                        <div class="read-more-flower-arr-btn"> <a href=""> Read More </a></div>
                     </div>
                     <div class="decor-leaf-flower-bottom-left">
                         <img src="/floral/img_and_fonts/image/Leafs1.png" alt="">
@@ -81,30 +93,178 @@
             </div>
         </div>
         <div class="our-top-product-content">
-
+            <div class="header-our-top-product">
+                <div class="leaf-product-top-left">
+                    <img src="/floral/img_and_fonts/image/Leaf_product.png" alt="">
+                </div>
+                <div class="heading-our-top-product">
+                    <h2>Our Top Products</h2>
+                    <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+                </div>
+                <div class="leaf-product-top-right">
+                    <img src="/floral/img_and_fonts/image/Leaf_product_2.png" alt="">
+                </div>
+            </div>
+            <div class="container slider-container">
+                <div class="row respon-slider">
+                    <div class="col-md-12 col-lg-3 flower-slider">
+                        <div class="flower-image-slider">
+                            <img src="/floral/img_and_fonts/image/flower_product.png" alt="">
+                        </div>
+                        <div class="intro-text-product">
+                            <h3>Lorem impsun</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur elit, sed do eiusmod tempor</p>
+                        </div>
+                        <div class="more-btn">
+                            <button class="read-more-btn">Read More</button>
+                        </div>
+                    </div>
+                    <div class="col-md-12 col-lg-3 flower-slider">
+                        <div class="flower-image-slider">
+                            <img src="/floral/img_and_fonts/image/flower_product_2.png" alt="">                            
+                        </div>
+                        <div class="intro-text-product">
+                            <h3>Lorem impsun</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur elit, sed do eiusmod tempor</p>
+                        </div>
+                        <div class="more-btn">
+                            <button class="read-more-btn">Read More</button>
+                        </div>
+                    </div>
+                    <div class="col-md-12 col-lg-3 flower-slider">
+                        <div class="flower-image-slider">
+                            <img src="/floral/img_and_fonts/image/flower_product_3.png" alt="">                            
+                        </div>
+                        <div class="intro-text-product">
+                            <h3>Lorem impsun</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur elit, sed do eiusmod tempor</p>
+                        </div>
+                        <div class="more-btn">
+                            <button class="read-more-btn">Read More</button>
+                        </div>
+                    </div>
+                    <div class="col-md-12 col-lg-3 flower-slider">
+                        <div class="flower-image-slider">
+                            <img src="/floral/img_and_fonts/image/flower_product_4.png" alt="">
+                        </div>
+                        <div class="intro-text-product">
+                            <h3>Lorem impsun</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur elit, sed do eiusmod tempor</p>
+                        </div>
+                        <div class="more-btn">
+                            <button class="read-more-btn">Read More</button>
+                        </div>
+                    </div>
+                    <div class="col-md-12 col-lg-3 flower-slider">
+                        <div class="flower-image-slider">
+                            <img src="/floral/img_and_fonts/image/flower_product_4.png" alt="">                          
+                        </div>
+                        <div class="intro-text-product">
+                            <h3>Lorem impsun</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur elit, sed do eiusmod tempor</p>
+                        </div>
+                        <div class="more-btn">
+                            <button class="read-more-btn">Read More</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="leaf-decor-product-bottom">
+                    <div class="leaf-bottom-left-product">
+                        <img src="/floral/img_and_fonts/image/Leaf_product_3.png" alt="">
+                    </div>
+                    <div class="leaf-bottom-right-product">
+                        <img src="/floral/img_and_fonts/image/Leaf_product_4.png" alt="">
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="how-we-do-it-content">
-
+            <h2>How We Do it</h2>
+            <h4>Lorem ipsum dolor sit amet, consectetur</h4>
+            <div class="video-how-we-do-it">
+                <video src="/floral/img_and_fonts/image/Handtied_and_Wrapping.mp4" controls autoplay></video>                
+            </div>
         </div>
-        <div class="special-sale-off">
-
-        </div>
-        <div class="intro-product-best-flower">
-
-        </div>
-        <div class="intro-take-care-details">
-
-        </div>
-        <div class="intro-love-what-we-do">
-
-        </div>
-        <div class="form-subcribe">
-
-        </div>
-        <div class="footer">
-
-        </div>
+        <div class="special-sale-off"></div>
+        <div class="intro-product-best-flower"></div>
+        <div class="intro-take-care-details"></div>
+        <div class="intro-love-what-we-do"></div>
+        <div class="form-subcribe"></div>
+        <div class="footer"></div>
     </div>
-    <script src="/js/number_run.js"></script>
+    <div class="nav_overlay js-sidebar-overlay">
+        <div class="nav_sidebar">
+          <div class="sidebar-close js-sidebar-close">
+            <i class="ti-close"></i>
+          </div>
+          <ul class="nav_list">
+            <li>
+              <a class="nav_link" href="">Home</a>
+            </li>
+            <li>
+              <a class="nav_link" href="">Services</a>
+            </li>
+            <li>
+              <a class="nav_link" href="">About</a>
+            </li>
+            <li>
+              <a class="nav_link" href="">Contact</a>
+            </li>
+            <li>
+                <a class="nav_link" href="">Sign In</a>
+              </li>
+          </ul>
+        </div>
+      </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js" integrity="sha512-HGOnQO9+SP1V92SrtZfjqxxtLmVzqZpjFFekvzZVWoiASSQgSr4cw9Kqd2+l8Llp4Gm0G8GIFJ4ddwZilcdb8A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script>
+    $('.respon-slider').slick({
+  dots: false,
+  infinite: true,
+  speed: 200,
+  slidesToShow: 4,
+  slidesToScroll: 1,
+  arrows: true,
+        prevArrow:`<button type='button' class='slick-prev pull-left'><i class="fa-solid fa-arrow-left"></i></button>`,
+        nextArrow:`<button type='button' class='slick-next pull-right'><i class="fa-solid fa-arrow-right"></i></button>`,
+  responsive: [
+    {
+      breakpoint: 992,
+      settings: {
+        slidesToShow: 3,
+        slidesToScroll: 3,
+        infinite: true,
+        dots: false
+      }
+    },
+    {
+        breakpoint: 784,
+        settings:{
+            slidesToShow: 2,
+            slidesToScroll: 1
+        }
+    },
+    {
+      breakpoint: 600,
+      settings: {
+        slidesToShow: 2,
+        slidesToScroll: 2
+      }
+    },
+    {
+      breakpoint: 480,
+      settings: {
+        slidesToShow: 1,
+        slidesToScroll: 1
+      }
+    }
+    // You can unslick at a given breakpoint now by adding:
+    // settings: "unslick"
+    // instead of a settings object
+  ]
+});
+</script>
+    <script src="/js/floral.js"></script>
 </body>
 </html>
