--- a/floral_page/html/floral.html
+++ b/floral_page/html/floral.html
@@ -75,19 +75,19 @@
         </div>
         <div class="container-fluid-sales container-fluid">
             <div class="sales row">
-                <div class="number-run package-sold-number col-xl-3 col-lg-3">
+                <div class="number-run package-sold-number col-xl-3 col-lg-3 col-md-6">
                     <h3 id="package-sold-number">3000</h3>
                     <h4>Packages Sold</h4>
                 </div>
-                <div class="number-run bouquet-sold col-xl-3 col-lg-3"> 
+                <div class="number-run bouquet-sold col-xl-3 col-lg-3 col-md-6"> 
                     <h3 id="bouquet-sold-number">5000</h3>
                     <h4>Bouquet Sold</h4>
                 </div>
-                <div class="number-run happy-clients col-xl-3 col-lg-3">
+                <div class="number-run happy-clients col-xl-3 col-lg-3 col-md-6">
                      <h3 id="happy-clients-number">7000</h3>
                      <h4>Happy Clients</h4>
                     </div>
-                <div class="number-run year-of-exp col-xl-3 col-lg-3">
+                <div class="number-run year-of-exp col-xl-3 col-lg-3 col-md-6">
                      <h3 id="year-of-exp-number">10</h3>
                      <h4>Years of Experience</h4>
                     </div>
@@ -211,8 +211,12 @@
                     <div class="image-leaf-best-flower">
                         <img src="/floral_page/img_and_fonts/image/leaf_best_flower.png" alt="">
                     </div>
-                    <h2>We select the best flowers</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
+                    <div class="heading-contain-best-flower">
+                        <h2>We select the best flowers</h2>
+                    </div>
+                    <div class="paragraph-contain-best-flower">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
+                    </div>
                     <div class="more-btn">
                         <button class="read-more-btn">Read More</button>
                     </div>
